Fixed more layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@ h1 {
 	color: #fff;
 	background-color: rgb(75, 77, 80);
 	margin: 0px;
-	height: 15px;
-	width: 50%;
+	height: 45px;
+	width: 45%;
 	text-align: left;
 	display: inline-block;
 }
